# movie_recommender

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
movie_recommender/: __init__.py  dataset.py  features.py  plots.py
movie_recommender/modeling/: predict.py  train.py
