[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "movie_recommender"
version = "0.0.1"
description = "A scalable movie recommendation engine leveraging Apache Spark\u2019s ALS-based collaborative filtering to deliver personalized movie suggestions."
authors = [
  { name = "BDA501 - Project team" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["movie_recommender"]
include = ["pyproject.toml", "movie_recommender/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["movie_recommender"]
force-sort-within-sections = true

